--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.3",
+    "version": "0.0.4",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -21,12 +21,12 @@
     },
     "scripts": {
         "build": "rm -fR ./lib && tsc --project tsconfig.json",
-        "start": "npm run build && ./bin/leap start",
-        "pair": "npm run build && ./bin/leap pair"
+        "start": "npm run build && ./bin/leap -d start",
+        "pair": "npm run build && ./bin/leap -d pair"
     },
     "dependencies": {
         "@mkellsy/event-emitter": "^1.3.1",
-        "@mkellsy/leap": "^1.4.4",
+        "@mkellsy/leap": "^1.4.6",
         "bson": "6.0.0",
         "colors": "^1.4.0",
         "commander": "^11.1.0",
