--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.4",
+    "version": "0.0.5",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -13,8 +13,7 @@
     "main": "lib/index.js",
     "files": [
         "/lib",
-        "/bin",
-        "/data"
+        "/bin"
     ],
     "bin": {
         "leap": "bin/leap"
@@ -26,10 +25,10 @@
     },
     "dependencies": {
         "@mkellsy/event-emitter": "^1.3.1",
-        "@mkellsy/leap": "^1.4.9",
-        "bson": "6.0.0",
+        "@mkellsy/leap": "^1.5.0",
+        "bson": "5.5.1",
         "colors": "^1.4.0",
-        "commander": "^11.1.0",
+        "commander": "^10.0.1",
         "js-logger": "^1.6.1",
         "node-forge": "^1.3.1",
         "tinkerhub-mdns": "^0.5.1"
