--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.5",
+    "version": "0.1.0",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -12,29 +12,27 @@
     "homepage": "https://github.com/mkellsy/lutron",
     "main": "lib/index.js",
     "files": [
-        "/lib",
-        "/bin"
+        "/lib"
     ],
     "bin": {
         "leap": "bin/leap"
     },
     "scripts": {
-        "build": "rm -fR ./lib && tsc --project tsconfig.json",
-        "start": "npm run build && ./bin/leap -d start",
-        "pair": "npm run build && ./bin/leap -d pair"
+        "build": "rm -fR ./lib && tsc --project tsconfig.json"
     },
     "dependencies": {
         "@mkellsy/event-emitter": "^1.3.1",
         "@mkellsy/leap": "^1.5.0",
         "bson": "5.5.1",
         "colors": "^1.4.0",
-        "commander": "^10.0.1",
+        "deep-equal": "^2.2.3",
         "js-logger": "^1.6.1",
         "node-forge": "^1.3.1",
         "tinkerhub-mdns": "^0.5.1"
     },
     "devDependencies": {
         "@types/debug": "^4.1.12",
+        "@types/deep-equal": "^1.0.4",
         "@types/multicast-dns": "^7.2.4",
         "@types/node": "^20.11.0",
         "@types/node-forge": "^1.3.11",
