--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.0",
+    "version": "0.1.1",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -7,9 +7,9 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/mkellsy/lutron"
+        "url": "https://github.com/mkellsy/leap-client"
     },
-    "homepage": "https://github.com/mkellsy/lutron",
+    "homepage": "https://github.com/mkellsy/leap-client",
     "main": "lib/index.js",
     "files": [
         "/lib"
