--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.2",
+    "version": "0.1.3",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -15,7 +15,8 @@
         "/lib"
     ],
     "scripts": {
-        "build": "rm -fR ./lib && tsc --project tsconfig.json"
+        "build": "rm -fR ./lib && tsc --project tsconfig.json",
+        "prepublishOnly": "npm run build"
     },
     "dependencies": {
         "@mkellsy/event-emitter": "^1.3.1",
