--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.5",
+    "version": "0.1.6",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -24,6 +24,7 @@
         "bson": "5.5.1",
         "colors": "^1.4.0",
         "deep-equal": "^2.2.3",
+        "flat-cache": "^3.2.0",
         "js-logger": "^1.6.1",
         "node-forge": "^1.3.1",
         "tinkerhub-mdns": "^0.5.1"
@@ -31,6 +32,7 @@
     "devDependencies": {
         "@types/debug": "^4.1.12",
         "@types/deep-equal": "^1.0.4",
+        "@types/flat-cache": "^2.0.2",
         "@types/multicast-dns": "^7.2.4",
         "@types/node": "^20.11.0",
         "@types/node-forge": "^1.3.11",
