--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.1.9",
+    "version": "1.0.0",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -16,6 +16,7 @@
     ],
     "scripts": {
         "build": "rm -fR ./lib && tsc --project tsconfig.json",
+        "start": "npm run build && node ./lib/Command/index.js",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
