--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.2",
+    "version": "1.0.3",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@mkellsy/event-emitter": "^1.3.1",
+        "@mkellsy/hap-device": "^1.0.0",
         "@mkellsy/leap": "^1.5.0",
         "bson": "5.5.1",
         "colors": "^1.4.0",
