--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.7",
+    "version": "1.1.1",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -15,13 +15,13 @@
         "/lib"
     ],
     "scripts": {
-        "build": "rm -fR ./lib && tsc --project tsconfig.json",
+        "build": "./build",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@mkellsy/event-emitter": "^1.3.1",
-        "@mkellsy/hap-device": "^1.0.3",
-        "@mkellsy/leap": "^1.5.0",
+        "@mkellsy/event-emitter": "^1.4.1",
+        "@mkellsy/hap-device": "^1.1.1",
+        "@mkellsy/leap": "^1.7.1",
         "bson": "5.5.1",
         "colors": "^1.4.0",
         "deep-equal": "^2.2.3",
@@ -37,6 +37,7 @@
         "@types/multicast-dns": "^7.2.4",
         "@types/node": "^20.11.0",
         "@types/node-forge": "^1.3.11",
+        "esbuild": "^0.20.2",
         "typescript": "^5.3.3"
     }
 }
