--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.2.1",
+    "version": "1.2.2",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -15,7 +15,7 @@
         "/lib"
     ],
     "scripts": {
-        "build": "./build",
+        "build": "node ./build",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
