--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.2.3",
+    "version": "1.2.4",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -15,13 +15,15 @@
         "/lib"
     ],
     "scripts": {
-        "build": "node ./build",
+        "build": "npm run format && npm run lint && node ./build",
+        "lint": "eslint ./src/*.ts",
+        "format": "prettier --write .",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@mkellsy/event-emitter": "^1.4.1",
-        "@mkellsy/hap-device": "^1.2.1",
-        "@mkellsy/leap": "^1.7.2",
+        "@mkellsy/event-emitter": "^1.5.2",
+        "@mkellsy/hap-device": "^1.5.3",
+        "@mkellsy/leap": "^1.7.3",
         "bson": "5.5.1",
         "colors": "^1.4.0",
         "deep-equal": "^2.2.3",
@@ -31,13 +33,21 @@
         "tinkerhub-mdns": "^0.5.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.2.0",
         "@types/debug": "^4.1.12",
         "@types/deep-equal": "^1.0.4",
+        "@types/eslint__js": "^8.42.3",
         "@types/flat-cache": "^2.0.2",
         "@types/multicast-dns": "^7.2.4",
         "@types/node": "^20.11.0",
         "@types/node-forge": "^1.3.11",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
         "esbuild": "^0.20.2",
+        "eslint": "^8.57.0",
+        "eslint-plugin-jsdoc": "^48.2.3",
+        "prettier": "^3.2.5",
+        "source-map-support": "^0.5.21",
+        "ts-node": "^10.9.1",
         "typescript": "^5.3.3"
     }
 }
