--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.2.0",
+        "@sinonjs/fake-timers": "^13.0.5",
         "@types/chai": "^4.3.9",
         "@types/chai-subset": "^1.3.4",
         "@types/debug": "^4.1.12",
@@ -49,6 +50,7 @@
         "@types/node-forge": "^1.3.11",
         "@types/sinon": "^10.0.20",
         "@types/sinon-chai": "^3.2.11",
+        "@types/sinonjs__fake-timers": "^8.1.5",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^7.11.0",
         "chai": "^4.3.10",
