--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,13 @@ jobs:
               with:
                   node-version: 20
             - run: npm ci
+            - run: npm run generate
             - run: npm run build
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+                  AUTH_CA: ${{secrets.AUTH_CA}}
+                  AUTH_KEY: ${{secrets.AUTH_KEY}}
+                  AUTH_CERT: ${{secrets.AUTH_CERT}}
 
     publish-npm:
         needs: build
@@ -25,6 +31,10 @@ jobs:
                   node-version: 20
                   registry-url: https://registry.npmjs.org/
             - run: npm ci
+            - run: npm run generate
             - run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+                  AUTH_CA: ${{secrets.AUTH_CA}}
+                  AUTH_KEY: ${{secrets.AUTH_KEY}}
+                  AUTH_CERT: ${{secrets.AUTH_CERT}}
