--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lint": "eslint ./src/*.ts",
         "format": "prettier --write .",
         "test": "nyc mocha test/*.test.ts test/**/*.test.ts",
+        "generate": "node ./generate",
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
