--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.7.1",
+    "version": "1.7.2",
     "name": "@mkellsy/leap-client",
     "displayName": "Lutron LEAP Client",
     "description": "Publishes device states using the Lutron LEAP protocol",
@@ -50,6 +50,7 @@
         "@types/multicast-dns": "^7.2.4",
         "@types/node": "^20.11.0",
         "@types/node-forge": "^1.3.11",
+        "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^10.0.20",
         "@types/sinon-chai": "^3.2.11",
         "@types/sinonjs__fake-timers": "^8.1.5",
@@ -65,13 +66,13 @@
         "mocha": "^10.2.0",
         "nyc": "^15.1.0",
         "prettier": "^3.2.5",
-        "proxyrequire": "^1.0.21",
+        "proxyquire": "^2.1.3",
         "sinon": "^17.0.0",
         "sinon-chai": "^3.7.0",
         "source-map-support": "^0.5.21",
+        "ts-node": "^10.9.1",
         "typedoc": "^0.26.10",
         "typedoc-plugin-markdown": "^4.2.9",
-        "ts-node": "^10.9.1",
         "typescript": "^5.3.3"
     }
 }
